# CE4171

./: .gitignore  Containerfile  LICENSE  README.md  pyproject.toml  server.ini  server_container.ini
dlserver/: __init__.py  app.py  app_testclient.py  dlserver_pb2.py  dlserver_pb2_grpc.py  labels.py  preprocess.py  server.py  trainer.py
dlserver/client/: testclient.py
dlserver/executors/: iexecutor.py  texecutor.py
dlserver/server/: server.py  state.py
dlserver/training/: trainer.py
proto/: Makefile  dlserver.proto
train/: preprocess.py  training.ipynb
