[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "dlserver"
author = "Shenghao Yang"
author-email = "me@shenghaoyang.info"
classifiers = [
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.9"
requires = [
    "tensorflow~=2.5.0rc1",
    "scipy~=1.6.2",
]

[tool.flit.metadata.requires-extra]
dev = [
    "grpcio-tools",
    "jupyterlab",
    "matplotlib~=3.4.1",
    "seaborn~=0.11.1"
]

[tool.flit.scripts]
dlserver = "dlserver.app:main"
